blocks/lead.css
.lead {
  width: 100%;
  height: auto;
  top: 194px;
  left: 148px;
}

.lead__title {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
  font-weight: 900;
  font-size: 96px;
  line-height: 100px;
}

.lead__subtitle {
  display: block;
  width: 100%;
  margin-top: 72px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  font-weight: 400;
  font-size: 30px;
  line-height: 36px;
  letter-spacing: 0;
}

.lead__image {
  display:block;
  width: 100%;
  height: auto;
  object-fit: contain;
  filter: grayscale(100%);
}

@media screen and (min-width: 321px) and (max-width: 768px) {

  .lead__title {
    font-size: 45px;
    line-height: 79px;
  }
  .lead__subtitle {
    font-size: 30px;
    line-height: 30px;
  }
  
}

@media screen and (max-width: 320px) {
  .lead__title {
    font-size: 30px;
    line-height: 44px;
  }
  .lead__subtitle {
    font-size: 16px;
    line-height: 20px;
  }
  .lead__image {
    height: auto;
  }
}

